tests/transpiler/x/zig/values_builtin.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/values_builtin.zig:6:185: error: no field named 'value' in struct 'hash_map.HashMapUnmanaged([]const u8,i64,hash_map.StringContext,80).Entry'
/root/.local/share/mise/installs/zig/0.12.0/lib/std/hash_map.zig:757:27: note: struct declared here
